--- a/src/Advent.css
+++ b/src/Advent.css
@@ -32,3 +32,21 @@
     width: 15px;
     float: right;
 }
+
+@media only screen and (max-width:480px) {
+    .container {
+     max-width: 480px;
+    }
+
+    .to-visit {
+        padding: 20px;
+    }
+
+    .vis {
+        display: none;
+    }
+
+    .places-list {
+        display: block;
+    }
+}
