--- a/src/Home.css
+++ b/src/Home.css
@@ -29,8 +29,8 @@
 
 nav {
   display: flex;
-  justify-content: center;
   align-items: center;
+  padding: 10px 5%;
 }
 
 nav ul {
@@ -46,9 +46,7 @@ nav ul li {
 
 nav ul li a {
   text-decoration: none;
-  color: black;
-  font-weight: 400;
-  transition: 0.3s ease-in-out;
+  color: #053519;
 }
 
 .connect {
@@ -177,7 +175,6 @@ main h1 {
 .wallets {
   display: flex;
   justify-content: space-around;
-  height: 50px;
   width: 100%;
   padding: 10px;
   background: linear-gradient(90deg, #a02279 11.45%, #a02279 11.45%);
@@ -286,191 +283,224 @@ footer ul li {
   font-size: 13px;
 }
 
-@media only screen and (max-width: 1268px) {
-    .title-text .search input {
-      padding: 19px 150px 20px 19px;
-    }
-    .title-text button {
-      padding: 19px 60px;
-    }
-    .place {
-      grid-template-columns: repeat(3, 1fr);
-    }
-    .partners img {
+/* .fa-bars {
+  font-size: 30px;
+} */
+
+
+
+@media only screen and (max-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+
+  .logo {
+    float: none;
+  }
+
+  nav {
+  display: flex;
+  justify-content: left;
+  padding: 10px;
+  }
+  
+  nav ul li {
+    display: inline;
+  }
+
+  nav ul {
+    flex: none;
+    text-align: left;
+    /* margin: 20px; */
+  }
+
+  .connect {
+    margin-left: 10px;
+    padding: 10px;
+    width: 150px;
+  }
+
+  main {
+    padding: 20px;
+  }
+
+  .rent-meta {
+    max-width: 300px;
+    align-self: center;
+  }
+
+  header,
+  .logo,
+  nav {
+    padding: 20px;
+  }
+
+  header h1 {
+    font-size: 30px;
+    margin-bottom: 40px;
+  }
+
+  .header-content {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .header-images img {
+    width: 150px;
+  }
+
+  .header-images {
+    display: flex;
+    max-width: 400px;
+  }
+
+  .image1 {
+    margin-top: 50px;
+  }
+
+  .btn {
+    width: 100px;
+    height: 40px;
+  }
+
+  .srch {
+    width: 200px;
+    height: 40px;
+  }
+
+  section {
+    display: flex;
     width: 100%;
-    margin-left: 0.5rem;
+    padding: 30px 20px;
   }
+
+  .nft-img {
+   max-width: 300px;
   }
-  @media only screen and (max-width: 1005px) {
-    .title-text .search input {
-      padding: 19px 100px 20px 19px;
-    }
-    .title-text button {
-      padding: 19px 60px;
-    }
-    header {
-      margin-bottom: 4rem;
-    }
-    .place {
-      grid-template-columns: repeat(2, 1fr);
-    }
-    .tags {
-      display: block;
-      margin-bottom: 2rem;
-      height: auto;
-    }
-  
-    .tags-text {
-      margin-right: 0;
-    }
-    .tags-text p {
-      margin-bottom: 1rem;
-      font-size: 18px;
-    }
+
+  .wallets {
+    justify-content: space-between;
   }
-  @media only screen and (max-width: 904px) {
-    nav {
-      box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-    }
-    .nav-link {
-      position: fixed;
-      right: 100%;
-      top: 94px;
-      width: 60%;
-      height: 50%;
-      background-color: #fff;
-      box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-      display: block;
-    }
-    .nav-link.active {
-      right: 0;
-    }
-    .nav-link ul {
-      display: flex;
-      justify-content: flex-start;
-      flex-direction: column;
-      margin-bottom: 20px;
-    }
-    .nav-link ul li:nth-child(1) {
-      margin-top: 20px;
-    }
-    .nav-link ul li {
-      margin-top: 50px;
-      width: 100%;
-    }
-    .connect {
-      margin-left: 20px;
-    }
-    .connect a {
-      font-size: 25px;
-    }
-    .nav-link ul li a {
-      padding-left: 20px;
-      text-align: left;
-      font-size: 25px;
-    }
-  
-    .title-text .search input {
-      padding: 19px 70px 20px 19px;
-    }
-    .title-text button {
-      padding: 19px 40px;
-    }
-    .mobile {
-      display: block;
-      cursor: pointer;
-    }
-    .overlay {
-      width: 100%;
-    }
-    .section-three article {
-      display: block;
-    }
-    .section-three {
-      height: auto;
-    }
-    .section-three article {
-      display: block;
-      height: auto;
-    }
-    .text-main {
-      width: 100%;
-      margin-top: 4rem;
-    }
-    .image-main {
-      margin-bottom: 2rem;
-      width: 100%;
-    }
-    footer {
-      height: auto;
-      padding: 30px 0;
-    }
-    .footer-icon {
-      display: flex;
-      align-items: center;
-      height: auto;
-      justify-content: space-between;
-    }
-    footer article {
-      display: block;
-    }
-    .footer-text {
-      display: flex;
-      width: 100%;
-      align-items: center;
-      justify-content: space-between;
-      flex-wrap: wrap;
-    }
-    .section-one {
-      height: auto;
-      margin-bottom: 2rem;
-    }
-    .section-one article {
-      display: block;
-      height: auto;
-    }
-    .title-text {
-      width: 100%;
-      height: auto;
-      margin-bottom: 32px;
-    }
-    .title-img {
-      width: 100%;
-    }
-    .main {
-      height: auto;
-    }
-    .tags-text p {
-      margin-right: 1rem;
-      font-size: 15px;
-    }
+
+  .wallets img {
+    width: 100px;
   }
-  @media only screen and (max-width: 700px) {
-    .place {
-      grid-template-columns: repeat(1, 1fr);
-    }
-    .tags-text p {
-      margin-right: 0.5rem;
-      font-size: 15px;
-    }
+
+  .places {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
   }
-  @media only screen and (max-width: 502px) {
-    .nav-link {
-      width: 100%;
-    }
-    .tags-text p {
-      margin-right: 1rem;
-      font-size: 10px;
-    }
+
+  .lists {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
   }
-  @media only screen and (max-width: 400px) {
-    .title-text .search input {
-      padding: 15px 50px 15px 19px;
-    }
-    .title-text button {
-      padding: 15px 40px;
-    }
-    .tags-text p {
-      display: none;
-    }
+
+  .lists h2 {
+    margin-top: 20px;
   }
+}
+
+@media only screen and (max-width: 480px) {
+  .container {
+    max-width: 480px;
+  }
+
+  .logo {
+    float: left;
+  }
+  nav {
+    display: block;
+    align-items: center;
+    padding: 10px 5%;
+  }
+
+  nav ul li {
+    display: block;
+    margin-top: 5px;
+  }
+
+  .connect {
+    margin-top: 10px;
+  }
+
+  nav ul {
+    flex: none;
+    text-align: left;
+    margin-top: 60px;
+  }
+
+  main {
+    padding: 20px;
+  }
+
+  header,
+  .logo,
+  nav {
+    padding: 20px;
+  }
+
+  header h1 {
+    font-size: 30px;
+    margin-bottom: 40px;
+  }
+
+  .header-content {
+    display: block;
+  }
+
+  .header-images img {
+    width: 150px;
+  }
+
+  .header-images {
+    display: flex;
+    margin-top: 50px;
+  }
+
+  .image1 {
+    margin-top: 50px;
+  }
+
+  .btn {
+    width: 100px;
+    height: 40px;
+  }
+
+  .srch {
+    width: 200px;
+    height: 40px;
+  }
+
+  section {
+    display: block;
+    width: 100%;
+    padding: 30px 20px;
+  }
+
+  .nft-img {
+    margin-top: 20px;
+    max-width: 300px;
+  }
+
+  .wallets {
+    justify-content: space-between;
+  }
+
+  .wallets img {
+    width: 100px;
+  }
+
+  .places {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
+  .lists {
+    display: block;
+  }
+
+  .lists h2 {
+    margin-top: 20px;
+  }
+}
