--- a/src/Home.css
+++ b/src/Home.css
@@ -315,9 +315,10 @@ footer ul li {
   }
 
   .connect {
-    margin-left: 10px;
+    font-size: 10px;
+    margin-left: 5px;
     padding: 10px;
-    width: 150px;
+    width: 110px;
   }
 
   main {
